changed paginator to work with next page and previous page, this will avoid overflow problems with the number of pages

--- a/style.css
+++ b/style.css
@@ -110,12 +110,17 @@ h1,h2 {
 div.pager {
     text-align: center;
     margin: 1em 0;
+    /* avoids highlighting on press */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 div.pager span {
     display: inline-block;
-    width: 1.8em;
-    height: 1.8em;
     line-height: 1.8;
     text-align: center;
     cursor: pointer;
@@ -124,7 +129,7 @@ div.pager span {
     margin-right: 0.5em;
 }
 
-div.pager span.active {
+div.pager span:hover {
     background: #c00;
 }
 
